oxifft-codegen/tests/compile_fail/twiddle_unknown_radix.rs
use oxifft_codegen::gen_twiddle_codelet;

gen_twiddle_codelet!(3);

fn main() {}
